# sword-converter

./: README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: publish.yml  test.yml
sword_converter/converters/: bible.py
tests/: conftest.py  test_bible.py
